--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "node --test tests/**/*.test.js",
+    "test": "node --test tests/todo-model.unit.test.js",
+    "test:e2e": "playwright test",
     "lint": "eslint src",
     "lint:fix": "eslint src --fix"
   },
@@ -23,7 +24,8 @@
     "lit": "^3.1.0"
   },
   "devDependencies": {
-    "vite": "^5.0.0",
-    "eslint": "^8.55.0"
+    "@playwright/test": "^1.56.1",
+    "eslint": "^8.55.0",
+    "vite": "^5.0.0"
   }
 }
